# solar_controller

./: CALIBRATION.md  CMakeLists.txt  Doxyfile  README.md  WIRING.MD  sdkconfig
main/: CMakeLists.txt  adc_handler.c  adc_handler.h  channel_processor.c  channel_processor.h  cli_handler.c  cli_handler.h  control_handler.c  control_handler.h  main.c  nvs_storage.c  nvs_storage.h  test_config.h
